--- a/indx.html
+++ b/indx.html
@@ -6,7 +6,14 @@
     <title>Evilyn kauany</title>
 </head>
 <body>
-   <h1>Sobre mim</h1>
-   <p>meu nome é evilyn, eu sou uma estudante do colegio ccm eu tenho varios amigos legais eu tambem sou muito legal  eu tambemgosto um pouco de estudar.</p>
-</body>
+   <h1>Sobre mim</h1> eu tenho varios amigos legais eu tambem sou muito legal  eu tambemgosto um pouco de estudar.</p>
+   <p>meu nome é evilyn, eu sou uma estudante do colegio ccm
+
+
+
+
+
+
+
+ </body>
 </html>
