--- a/indx.html
+++ b/indx.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evilyn kauany</title>
-    
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+ <header>
+     <h3>meu curriculo</h3>
+</header>
+
+
    <h1>Sobre mim</h1> eu tenho varios amigos legais eu tambem sou muito legal  eu tambemgosto um pouco de estudar.</p>
    <p>meu nome é evilyn, eu sou uma estudante do colegio ccm
 
