--- a/indx.html
+++ b/indx.html
@@ -12,9 +12,12 @@
      <h3>meu curriculo</h3>
 </header>
 
+ <h1>Sobre mim</h1> 
+ <divi class=" foto">
+     <h2> evilyn kauany</h2>
+</divi>
 
-   <h1>Sobre mim</h1> eu tenho varios amigos legais eu tambem sou muito legal  eu tambemgosto um pouco de estudar.</p>
-   <p>meu nome é evilyn, eu sou uma estudante do colegio ccm
+   <p>meu nome é evilyn, eu sou uma estudante do colegio ccm eu tenho varios amigos legais eu tambem sou muito legal  eu tambemgosto um pouco de estudar.</p>
 
 
 
