--- a/indx.html
+++ b/indx.html
@@ -10,8 +10,13 @@
 <body>
  <header>
      <h3>meu curriculo</h3>
-</header>
-
+    <nav>
+      <ul>
+            <li><a href="#comtato" >contato</a></li>
+            <li><a eref="#exp">experiencia proficssional</a></li>
+    </ul>
+    <nav>
+    <der>
  <h1>Sobre mim</h1> 
  <divi class=" foto">
      <h2> evilyn kauany</h2>
