--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <der>
  <h1>Sobre mim</h1> 
  <divi class=" foto">
+    <img class="FOTO PERFIL" src="images (1).jpeg" alt="MINHA foto">
      <h2> evilyn kauany</h2>
+     <H3>e-email: evilyn.souza.santos@escola.pr.gov.br</H3>
+ </divi>
 </divi>
-
    <p>meu nome é evilyn, eu sou uma estudante do colegio ccm eu tenho varios amigos legais eu tambem sou muito legal  eu tambemgosto um pouco de estudar.</p>
 
 
